# Documentation-Intelligence

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
backend/: core.py
